list 변환 코드 리팩터링